--- a/src/app/pages/kafka-producer/kafka-producer.component.html
+++ b/src/app/pages/kafka-producer/kafka-producer.component.html
@@ -5,7 +5,7 @@
             <app-input [label]="'Broker'" [data]="data['k.p.broker']"></app-input>
             <app-input [label]="'Topic'" [data]="data['k.p.topic']"></app-input>
             <app-input [label]="'Message'" [data]="data['k.p.message']"></app-input>
-            <app-input [label]="'Console'" [data]="console"></app-input>
+            <app-output [label]="'Console'" [data]="console"></app-output>
             <app-button [label]="'Send'" (onClicked)="send($event)"></app-button>
             <app-button [label]="'Send*100'" (onClicked)="sendWithTimes(100)"></app-button>
         </div>
